--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .principal {
   text-align: center;
-  background-color: whitesmoke;
+  background-color: rgb(31, 26, 32);
   padding-top: 70px; /* o el alto del navbar */
   min-height: 100vh; /* para que ocupe toda la pantalla verticalmente */
 }
 .principal h1 {
+  color: whitesmoke;
   font-family: verdana;
   font-size: 5rem;
 }
