--- a/src/pages/Resultados.css
+++ b/src/pages/Resultados.css
@@ -1,3 +1,21 @@
 .resultados-container {
     color: whitesmoke;
+    
+}
+
+.partidos-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 15px;
+  margin-top: 1rem;
+}
+
+.partido-card {
+  background-color: #1f1a20;
+  border: 1px ridge orange;
+  box-shadow: 0 0 10px rgba(255, 165, 0, 0.7);
+  padding: 15px;
+  border-radius: 8px;
+  color: white;
+  font-weight: 600;
 }
