--- a/src/equipos/Equipos.css
+++ b/src/equipos/Equipos.css
@@ -1,5 +1,5 @@
-.head-container h1 {
+.head-container h2 {
     font-family: Lucida Sans;
-    font-size: 4rem;
-    color: darkblue;
+    font-size: 2rem;
+    color: rgb(139, 113, 0);
 }
