--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -91,7 +91,7 @@
   display: none;
   position: absolute;
  
-  background-color: orange;
+  background-color: #d1834f;
   min-width: 3rem;
   z-index: 1;
   top: 100%;
