--- a/src/pages/TablaPosiciones.css
+++ b/src/pages/TablaPosiciones.css
@@ -1,56 +1,38 @@
-/* TablaPosiciones.css */
+/* Estilos locales a TablaPosiciones */
 
-.tabla-posiciones-container {
+.posiciones-container {
     color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 20px;
-    width: 100%;
-    padding: 0 1rem;
-    box-sizing: border-box;
 }
 
-.tabla-posiciones-container h2 {
+
+.posiciones-container h2 {
     color: whitesmoke;
     text-align: center;
     margin-bottom: 10px;
 }
 
-.tabla-scroll-container {
-    width: 100%;
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch; /* Para un scroll suave en dispositivos móviles */
+.posiciones-container table {
     margin: 0 auto;
-}
-
-.tabla-scroll-container table {
     border-collapse: collapse;
-    width: 100%;
-    min-width: 800px; /* Ajusta este valor según el ancho mínimo que necesites */
+    width: auto; /* o 100% si querés que ocupe todo el ancho disponible */
+    min-width: 600px; /* O el mínimo que necesites */
+    border: 1px solid #ccc;
 }
 
-.tabla-scroll-container th,
-.tabla-scroll-container td {
+.posiciones-container th,
+.posiciones-container td {
     color: whitesmoke;
     border: 1px solid #ccc;
     padding: 8px 12px;
     text-align: center;
-    white-space: nowrap; /* Evita que el texto se divida en varias líneas */
 }
 
-/* Opcional: Estilos para la barra de scroll */
-.tabla-scroll-container::-webkit-scrollbar {
-    height: 8px;
-}
-
-.tabla-scroll-container::-webkit-scrollbar-track {
-    background: #f1f1f1;
-    border-radius: 10px;
-}
-
-.tabla-scroll-container::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 10px;
-}
-
-.tabla-scroll-container::-webkit-scrollbar-thumb:hover {
-    background: #555;
+.tabla-wrapper {
+  width: 100%;
+  overflow-x: auto;
+  margin-top: 1rem;
 }
