--- a/src/pages/Fixture.css
+++ b/src/pages/Fixture.css
@@ -70,3 +70,14 @@ li {
   color: #555;
   font-style: italic;
 }
+
+.leyenda-fixture {
+  margin-top: 2rem;
+  padding: 1rem;
+  font-size: 0.95rem;
+  font-style: italic;
+  color: #555;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-top: 1px solid #ddd;
+}
