--- a/src/pages/Inicio.css
+++ b/src/pages/Inicio.css
@@ -1,5 +1,4 @@
 .inicio-container{
-    
     color: whitesmoke;
     width: 100%;
     max-width: 800px;
@@ -18,21 +17,27 @@
 }
 
 .titulo-principal {
-    color: #2a4365;
-    font-size: 1.5rem; /* Tamaño más moderado */
-    line-height: 1.3; /* Espaciado entre líneas */
-    margin-bottom: 15px;
- 
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: whitesmoke;
+    transition: color 0.3s;
+}
+
+.titulo-principal:hover {
+  color: #ffcc00;
+  text-decoration: underline;
 }
 
 .destacado-box {
+    margin-top: 10px;
     background-color: rgb(20, 4, 4);
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
-/* Agrega esto a tu CSS */
+
 .contacto-box {
     background-color: #010305;
     padding: 15px;
